# amp-preview

./: .gitignore  .ls-lint.yml  .mega-linter.yml  .trivyignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  release-please-config.json  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/linters/: .prettierrc.json
.github/workflows/: ci.yml  linting-formatting.yml  release-please.yml  social-interaction.yml  static-analysis.yml
examples/: CMakeLists.txt
examples/clicking_scrolling/: CMakeLists.txt  MainStm32f746.cpp  MainWin.cpp  TouchViewClickingScrolling.cpp  TouchViewClickingScrolling.hpp
examples/qr_code/: CMakeLists.txt  MainStm32f746.cpp  MainWin.cpp
preview/: CMakeLists.txt
preview/fonts/: CMakeLists.txt  Fonts.hpp  FreeSans12pt7b.cpp  FreeSans18pt7b.cpp  FreeSans24pt7b.cpp  FreeSans9pt7b.cpp
preview/interfaces/: Bitmap.cpp  Bitmap.hpp  BitmapCanvas.cpp  BitmapCanvas.hpp  BitmapPainter.cpp  BitmapPainter.hpp  BufferedDisplay.hpp  BufferedDisplayIli9341.cpp  BufferedDisplayIli9341.hpp  BufferedDisplaySsd1306.cpp  BufferedDisplaySsd1306.hpp  Button.hpp  CMakeLists.txt  Canvas.hpp  Colour.cpp  Colour.hpp  DirectDisplay.hpp  DoubleBufferDisplay.hpp  Font.cpp  Font.hpp  Geometry.cpp  Geometry.hpp  Hub75Bitmap.cpp  Hub75Bitmap.hpp  Hub75BitmapCanvas.cpp  Hub75BitmapCanvas.hpp  Hub75BitmapPainter.cpp  Hub75BitmapPainter.hpp  MultiBufferDisplay.hpp  QRCode.cpp  QRCode.hpp  QrCode.cpp  QrCode.hpp  View.cpp  View.hpp  ViewOverlay.cpp  ViewOverlay.hpp  ViewPainter.hpp  ViewPainterBufferedDisplay.cpp  ViewPainterBufferedDisplay.hpp  (+8 more)
preview/interfaces/test/: CMakeLists.txt  TestBitmap.cpp  TestGeometry.cpp  TestViewPainterBufferedDisplay.cpp  TestViewPainterDirectDisplay.cpp  TestViewPainterDoubleBufferDisplay.cpp  TestViewRepainter.cpp  TestWindowBitmapCanvas.cpp
preview/interfaces/test_doubles/: BitmapPainterMock.hpp  BufferedDisplayMock.hpp  ButtonMock.hpp  CMakeLists.txt  CanvasMock.hpp  DirectDisplayMock.hpp  DoubleBufferDisplayMock.hpp  ViewMock.hpp  ViewPainterMock.hpp
preview/sdl/: CMakeLists.txt  DirectDisplaySdl.cpp  DirectDisplaySdl.hpp  LowPowerStrategySdl.cpp  LowPowerStrategySdl.hpp  SdlMouse.hpp  SdlTouchInteractor.cpp  SdlTouchInteractor.hpp
preview/stm32fxxx/: BitmapPainterStm.cpp  BitmapPainterStm.hpp  CMakeLists.txt  Hub75BitmapDisplayStm.cpp  Hub75BitmapDisplayStm.hpp  LcdStm.cpp  LcdStm.hpp
preview/touch/: CMakeLists.txt  TouchAligned.cpp  TouchAligned.hpp  TouchButton.cpp  TouchButton.hpp  TouchFrame.hpp  TouchFt5x06.cpp  TouchFt5x06.hpp  TouchHorizontalLayout.cpp  TouchHorizontalLayout.hpp  TouchPanel.cpp  TouchPanel.hpp  TouchRecipient.hpp  TouchScreen.cpp  TouchScreen.hpp  TouchScreenToTouchRecipientInteractor.cpp  TouchScreenToTouchRecipientInteractor.hpp  TouchSpinInteger.cpp  TouchSpinInteger.hpp  TouchSubView.cpp  TouchSubView.hpp  TouchTitledFrame.hpp  TouchVerticalLayout.cpp  TouchVerticalLayout.hpp  TouchViewMultiple.cpp  TouchViewMultiple.hpp  TouchViewSelector.cpp  TouchViewSelector.hpp
preview/touch/test/: CMakeLists.txt  TestTouchButton.cpp  TestTouchHorizontalLayout.cpp  TestTouchScreen.cpp  TestTouchVerticalLayout.cpp  TouchRecipientMock.hpp
preview/views/: CMakeLists.txt  HorizontalLayout.cpp  HorizontalLayout.hpp  HorizontalShifter.cpp  HorizontalShifter.hpp  RestrictPaint.hpp  VerticalLayout.cpp  VerticalLayout.hpp  VerticalShifter.cpp  VerticalShifter.hpp  ViewAligned.cpp  ViewAligned.hpp  ViewBitmap.cpp  ViewBitmap.hpp  ViewButtonPanel.cpp  ViewButtonPanel.hpp  ViewCurrentTime.cpp  ViewCurrentTime.hpp  ViewDisableableText.cpp  ViewDisableableText.hpp  ViewFadingText.cpp  ViewFadingText.hpp  ViewFrame.cpp  ViewFrame.hpp  ViewFramedText.cpp  ViewFramedText.hpp  ViewFramedTextButton.cpp  ViewFramedTextButton.hpp  ViewFramedTextButtonWithPopOut.cpp  ViewFramedTextButtonWithPopOut.hpp  ViewIcon.cpp  ViewIcon.hpp  ViewMultiple.cpp  ViewMultiple.hpp  ViewOffsetRegion.cpp  ViewOffsetRegion.hpp  ViewPanel.cpp  ViewPanel.hpp  ViewRotating.cpp  ViewRotating.hpp  (+8 more)
preview/views/test/: CMakeLists.txt  TestHorizontalLayout.cpp  TestRestrictPaint.cpp  TestVerticalLayout.cpp  TestViewBitmap.cpp  TestViewFrame.cpp  TestViewFramedText.cpp  TestViewOffsetRegion.cpp  TestViewPanel.cpp  TestViewSelector.cpp  TestViewText.cpp  TestViewTitledFrame.cpp
